# ERUNeuraTest

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  conftest.py  pyproject.toml  readme.md  requirements.txt
.github/workflows/: python-app.yml
benchmark/: README.md
benchmark/projecttest/: train.jsonl
docker/: .dockerignore  Dockerfile  docker-compose.yml
examples/: output.txt  sample.py  validator.py
examples/tests/: test_factorial.py  test_fibonacci.py  test_validator.py
notes/postprocess/: validator_explained.py
output/selected_methods/: jinja_methods.json
src/: __init__.py  code_analyzer.py  config.py  dataset_loader.py  framework.py  llm_client.py  main.py  metrics.py  test_generator.py
src/generation/: generation_readme.md
src/metrics/: metrics_readme.md
src/postprocess/: chain.py  postprocess_readme.md  processor.py  validator.py
src/postprocess/fixers/: base.py  imports.py  indentation.py  llm_fixer.py  syntax.py
src/preproces/: __init__.py  analyzer.py  complexity.py  exporter.py  preprocess_readme.md  scanner.py
src/preprocess/: __init__.py  __main__.py  analyzer.py  complexity.py  exporter.py  models.py  scanner.py  selector.py  yagmur_preprocess_readme.md
src/preprocess/output/selected_methods/: dash_methods.json  databases_methods.json  diffprivlib_methods.json  feedparser_methods.json  jinja_methods.json  mrjob_methods.json  twilio-python_methods.json
tests/postprocess_test/e2e/: __init__.py
tests/postprocess_test/integration/: __init__.py
tests/postprocess_test/unit/: __init__.py  test_validator.py
