[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eruneuratest"
version = "1.0.0"
description = "LLM tabanlı otomatik Python birim test üretimi framework'ü"
readme = "readme.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "ERU Yapay Zeka Kulübü", email = "yapay-zeka-kulubu@erciyes.edu.tr"}
]
keywords = ["testing", "llm", "unit-test", "automation", "groq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "groq>=0.37.0",
    "datasets>=2.16.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "pytest>=7.4.0",
    "huggingface-hub>=0.19.4",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/Yapay-Zeka-Kulubu/ERUNeuraTest"
Repository = "https://github.com/Yapay-Zeka-Kulubu/ERUNeuraTest"
Issues = "https://github.com/Yapay-Zeka-Kulubu/ERUNeuraTest/issues"

[project.scripts]
eruneuratest = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100
